--- a/data/net.bloupla.ummide.desktop
+++ b/data/net.bloupla.ummide.desktop
@@ -1,12 +1,11 @@
 [Desktop Entry]
 Type=Application
-Name=엄랭 IDE
+Name=umjunsik-lang IDE
 GenericName=Umjunsik-Lang IDE
 Comment=IDE for the umjunsik-lang esoteric programming language
-Comment[ko]=엄준식 언어를 위한 통합 개발 환경
 Exec=ummide
 Icon=net.bloupla.ummide
 Terminal=false
 Categories=Development;IDE;
-Keywords=programming;code;editor;umjunsik;엄랭;
+Keywords=programming;code;editor;umjunsik;
 StartupNotify=true
